--- a/tagritui/public/css/watermelon.bundle.css
+++ b/tagritui/public/css/watermelon.bundle.css
@@ -76,6 +76,7 @@
 /* Widgets */
 [data-theme=watermelon] .widget {
     background-color: var(--widget-bg);
+    color:#fff !important;
     border: none;
     box-shadow: 0px 3px 12px 0px var(--widget-bg), 0 3px 3px -2px #461a7714;
 }
@@ -237,3 +238,43 @@
 [data-theme=watermelon] .mdi.text-green {
     color: #4caf50 !important; /* or the original green */
 }
+
+
+/* nav colors start */
+[data-theme=watermelon] .navbar-nav>li>a{
+    color:#fff !important;
+}
+[data-theme=watermelon] .navbar-nav>li>a:hover{
+    color:#ddd !important;
+}
+[data-theme=watermelon] .navbar-brand:hover {
+    color:#ddd !important;
+}
+
+[data-theme="watermelon"] .navbar-default .navbar-nav > li > a {
+	color: #fff;
+}
+[data-theme="watermelon"] .navbar-default .navbar-nav > li > a:hover {
+	color: #ddd;
+}
+[data-theme="watermelon"] .navbar-default .navbar-brand:hover {
+	color: #ddd;
+}
+
+[data-theme=watermelon] #navbar-breadcrumbs > li > a::before {
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    text-decoration: inherit;
+    -webkit-font-smoothing: antialiased;
+    margin-right: .3em;
+    display: inline-block;
+    font-size: 24px;
+    transition: 0.2s;
+    position: relative;
+    top: 3px;
+    content: "\f105";
+    margin-right: 10px;
+    color: var(--white-color);
+}
+/* end */
